@@ -20,7 +20,8 @@
 14. Exceptions are required for all non Qt5 builds.
 15. Fix crash in settings dialog when some system-tray options removed.
 16. Use QIcon::fromTheme to set system-tray icon.
-17. Fix compilation wih older ffmpeg versions.
+17. Fix compilation with older ffmpeg versions.
+18. Fix compilation with taglib versions older than 1.8
 
 1.4.0
 -----
